# scaffolding

cpp_scaffold/: CMakeLists.txt  README.md  change_name.sh
cpp_scaffold/include/: dummy.h  lib.h
cpp_scaffold/src/: dummy.cpp  lib.cpp  main.cpp
cpp_scaffold/test/: test_01.cpp  test_02.cpp  test_dummy.cpp
py_scaffold/: README.md  change_name.sh  main.py  requirements.txt  setup.py
py_scaffold/name_package/: core.py  lib.py
py_scaffold/tests/: test_01.py
